# template_images

./: CMakeLists.txt  Image.cpp  Image.h  Pixel.cpp  Pixel.h  PixelG.cpp  PixelG.h  PixelGA.cpp  PixelGA.h  PixelRGB.cpp  PixelRGB.h  PixelRGBA.cpp  PixelRGBA.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  testPixelG.cpp  testPixelGA.cpp  testPixelRGB.cpp  testPixelRGBA.cpp
test/lib/googletest/include/gtest/: gtest-death-test.h  gtest.h
test/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h
test/lib/googletest/scripts/: gtest-config.in
test/lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
test/lib/googletest/test/: gtest_output_test_.cc  gtest_unittest.cc
test/lib/googletest/xcode/Samples/FrameworkSample/: runtests.sh
test/lib/googletest/xcode/Scripts/: runtests.sh
